--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,9 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm run build
+      - uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET }}
+          aws-region: us-east-2
+      - run: aws s3 sync ./out s3://rosghub-static-next-site
