--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -107,7 +107,7 @@ collections:
       - label: "Publish Date"
         name: "date"
         widget: "datetime"
-        format: "YYYY-MM-DD"
+        format: "YYYY-MM-DD-HH:mm"
         dateFormat: "YYYY-MM-DD"
         timeFormat: "HH:mm"
       - label: Author
